--- a/app/globals.css
+++ b/app/globals.css
@@ -1315,7 +1315,7 @@ ul.info-list.info_on_right_side li:last-child {
   margin-top: -8px;
   font-weight: 900;
   font-family: "FontAwesome";
-  content: "";
+  content: "▼";
   font-size: 14px;
   line-height: 14px;
 }
@@ -1329,7 +1329,7 @@ ul.info-list.info_on_right_side li:last-child {
   margin-top: -7px;
   font-weight: 900;
   font-family: "FontAwesome";
-  content: "";
+  content: "▼";
   font-size: 14px;
   line-height: 14px;
 }
